style: fix nowrap

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -30,7 +30,7 @@ h6 {
 
 h1 {
   font-size: $typographic-base-font-size * 2.5;
-  white-space: nowrap;
+  word-break: keep-all;
   @include line-height(2);
   @include margin-top(4);
   @include margin-bottom(1);
