--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -13,7 +13,7 @@
     margin-right: auto;
     font-weight: 600;
     text-align: center;
-    white-space: nowrap;
+    word-break: keep-all;
     @include line-height(1.65);
     @include margin-top(1);
     @include margin-bottom(0)
